// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarContainer renders an empty avatar if no actors are supplied 1`] = `
.emotion-3 {
  margin-right: 8px;
}

.emotion-2 {
  height: 40px;
  width: 40px;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background-color: #FFFFFF;
  border-radius: 50%;
  box-sizing: content-box;
  cursor: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  overflow: hidden;
  position: static;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-transition: -webkit-transform 200ms,opacity 200ms;
  -webkit-transition: transform 200ms,opacity 200ms;
  transition: transform 200ms,opacity 200ms;
  box-shadow: 0 0 0 2px #FFFFFF;
  border: none;
  margin: 2px;
  padding: 0;
  font-size: inherit;
  font-family: inherit;
}

.emotion-2::-moz-focus-inner {
  border: 0;
  margin: 0;
  padding: 0;
}

.emotion-2::after {
  background-color: transparent;
  bottom: 0px;
  border-radius: 50%;
  content: ' ';
  left: 0px;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  right: 0px;
  top: 0px;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
  width: 100%;
}

.emotion-1 {
  background-color: #8993A4;
  width: 100%;
  height: 100%;
  display: block;
}

.emotion-1 svg {
  height: 40px;
  width: 40px;
}

.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
}

.emotion-0 > svg {
  max-height: 100%;
  max-width: 100%;
  vertical-align: bottom;
  overflow: hidden;
  pointer-events: none;
  color: #FFFFFF;
  fill: #8993A4;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

<div>
  <div
    class="emotion-3"
  >
    <div
      style="display: inline-block; position: relative; outline: 0;"
    >
      <span
        class="emotion-2"
      >
        <span
          class="emotion-1"
        >
          <span
            aria-hidden="true"
            class="emotion-0"
            role="presentation"
          >
            <svg
              height="24"
              role="presentation"
              viewBox="0 0 24 24"
              width="24"
            >
              <g
                fill="currentColor"
                fill-rule="evenodd"
              >
                <path
                  d="M6 14c0-1.105.902-2 2.009-2h7.982c1.11 0 2.009.894 2.009 2.006v4.44c0 3.405-12 3.405-12 0V14z"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </g>
            </svg>
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`AvatarContainer renders if first actor exists 1`] = `
.emotion-3 {
  margin-right: 8px;
}

.emotion-2 {
  height: 40px;
  width: 40px;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background-color: #FFFFFF;
  border-radius: 50%;
  box-sizing: content-box;
  cursor: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  overflow: hidden;
  position: static;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-transition: -webkit-transform 200ms,opacity 200ms;
  -webkit-transition: transform 200ms,opacity 200ms;
  transition: transform 200ms,opacity 200ms;
  box-shadow: 0 0 0 2px #FFFFFF;
  border: none;
  margin: 2px;
  padding: 0;
  font-size: inherit;
  font-family: inherit;
}

.emotion-2::-moz-focus-inner {
  border: 0;
  margin: 0;
  padding: 0;
}

.emotion-2::after {
  background-color: transparent;
  bottom: 0px;
  border-radius: 50%;
  content: ' ';
  left: 0px;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  right: 0px;
  top: 0px;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
  width: 100%;
}

.emotion-1 {
  background-color: #8993A4;
  width: 100%;
  height: 100%;
  display: block;
}

.emotion-1 svg {
  height: 40px;
  width: 40px;
}

.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
}

.emotion-0 > svg {
  max-height: 100%;
  max-width: 100%;
  vertical-align: bottom;
  overflow: hidden;
  pointer-events: none;
  color: #FFFFFF;
  fill: #8993A4;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

<div>
  <div
    class="emotion-3"
  >
    <span
      aria-expanded="false"
      aria-haspopup="true"
    >
      <div
        style="display: inline-block; position: relative; outline: 0;"
      >
        <span
          class="emotion-2"
        >
          <span
            class="emotion-1"
          >
            <span
              aria-label="Person"
              class="emotion-0"
              role="img"
            >
              <svg
                height="24"
                role="presentation"
                viewBox="0 0 24 24"
                width="24"
              >
                <g
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    d="M6 14c0-1.105.902-2 2.009-2h7.982c1.11 0 2.009.894 2.009 2.006v4.44c0 3.405-12 3.405-12 0V14z"
                  />
                  <circle
                    cx="12"
                    cy="7"
                    r="4"
                  />
                </g>
              </svg>
            </span>
          </span>
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`AvatarContainer renders if first actor exists even when there is no ARI 1`] = `
.emotion-3 {
  margin-right: 8px;
}

.emotion-2 {
  height: 40px;
  width: 40px;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background-color: #FFFFFF;
  border-radius: 50%;
  box-sizing: content-box;
  cursor: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  overflow: hidden;
  position: static;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-transition: -webkit-transform 200ms,opacity 200ms;
  -webkit-transition: transform 200ms,opacity 200ms;
  transition: transform 200ms,opacity 200ms;
  box-shadow: 0 0 0 2px #FFFFFF;
  border: none;
  margin: 2px;
  padding: 0;
  font-size: inherit;
  font-family: inherit;
}

.emotion-2::-moz-focus-inner {
  border: 0;
  margin: 0;
  padding: 0;
}

.emotion-2::after {
  background-color: transparent;
  bottom: 0px;
  border-radius: 50%;
  content: ' ';
  left: 0px;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  right: 0px;
  top: 0px;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
  width: 100%;
}

.emotion-1 {
  background-color: #8993A4;
  width: 100%;
  height: 100%;
  display: block;
}

.emotion-1 svg {
  height: 40px;
  width: 40px;
}

.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
}

.emotion-0 > svg {
  max-height: 100%;
  max-width: 100%;
  vertical-align: bottom;
  overflow: hidden;
  pointer-events: none;
  color: #FFFFFF;
  fill: #8993A4;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

<div>
  <div
    class="emotion-3"
  >
    <span
      aria-expanded="false"
      aria-haspopup="true"
    >
      <div
        style="display: inline-block; position: relative; outline: 0;"
      >
        <span
          class="emotion-2"
        >
          <span
            class="emotion-1"
          >
            <span
              aria-label="Person"
              class="emotion-0"
              role="img"
            >
              <svg
                height="24"
                role="presentation"
                viewBox="0 0 24 24"
                width="24"
              >
                <g
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    d="M6 14c0-1.105.902-2 2.009-2h7.982c1.11 0 2.009.894 2.009 2.006v4.44c0 3.405-12 3.405-12 0V14z"
                  />
                  <circle
                    cx="12"
                    cy="7"
                    r="4"
                  />
                </g>
              </svg>
            </span>
          </span>
        </span>
      </div>
    </span>
  </div>
</div>
`;
